trying to make it work on wechat

--- a/webgl-perf/perftest.html
+++ b/webgl-perf/perftest.html
@@ -18,7 +18,11 @@
 	
   <button onclick="startTests();">start tests</button>
   <button onclick="stopTests();">stop tests</button>
-  
+
+  <div id="next test" style="visibility: hidden">
+	<button onclick="startNextTest();">start next test</button> <span style="color: red"><-- PUSH TO START NEXT TEST</span>
+  </div>
+
   <p>
 	Please copy the results below and mail, Slack, or WeChat the results to Tyler. (tyler.daniel@vrviu.com)
 
