--- a/webgl-perf/perftest.html
+++ b/webgl-perf/perftest.html
@@ -19,9 +19,23 @@
   <button onclick="startTests();">start tests</button>
   <button onclick="stopTests();">stop tests</button>
 
+  <!--
   <div id="next test" style="visibility: hidden">
 	<button onclick="startNextTest();">start next test</button> <span style="color: red"><-- PUSH TO START NEXT TEST</span>
   </div>
+  -->
+
+  <button onclick="startNextTest();">start next test</button> <span style="color: red"><-- Manually run each test if nothing happens</span>
+
+  <p>
+
+  Status: <span id="status text">Stopped.</span>
+
+<!--
+  <div id="finished text" style="visibility: hidden">
+	<span style="color: green">All finished!</span>
+  </div>
+  -->
 
   <p>
 	Please copy the results below and mail, Slack, or WeChat the results to Tyler. (tyler.daniel@vrviu.com)
